# complexity-aware-fine-tuning

./: .gitignore  README.md  pyproject.toml
src/analysis/agregated_entropy/: phi-4_mmlu.ipynb  phi-4_mmlu_fallback.ipynb  qwen3b_mmlu.ipynb  qwen3b_mmlu_fallback.ipynb
src/analysis/cot_entropy.py/: phi4mini_mmlu.ipynb  phi4mini_w_fallback_mmlu.ipynb  qwen_3b_mmlu.ipynb  qwen_3b_w_fallback_mmlu.ipynb
src/analysis/masj/: mmlu_masj_education_levels.ipynb
src/analysis/single_token_entropy/: mistral_24b_mmlu.ipynb  mistral_24b_mmlu_w_fallback_if_unknown.ipynb  phi4_mmlu.ipynb  phi4_mmlu_w_fallback_if_unknown.ipynb  phi4_mmlu_w_fallback_if_unknown_alternative_prompt.ipynb  phi4mini_mmlu.ipynb  phi4mini_mmlu_w_fallback_if_unknown.ipynb  phi4mini_mmlu_w_fallback_if_unknown_alternative_prompt.ipynb  qwen_3b_mmlu.ipynb  qwen_3b_mmlu_w_fallback_if_unknown.ipynb  qwen_3b_mmlu_w_fallback_if_unknown_alternative_prompt.ipynb
src/experiments/cot_entropy/: phi4mini_mmlu.py  phi4mini_w_fallback_mmlu.py  qwen_3b_mmlu.py  qwen_3b_w_fallback_mmlu.py
src/experiments/cot_fine-tuning/: Qwen_train_test_CoT_masked_sft.py  Qwen_train_test_cot.py  Qwen_train_test_sft.py
src/experiments/distill/: deepseek_v3_mmlu.py
src/experiments/masj/: masj_education_level_mmlu.py
src/experiments/single_token_entropy/: mistral_24b_mmlu.py  mistral_24b_mmlu_w_fallback.py  mistral_7b_mmlu.py  phi4_mmlu.py  phi4_mmlu_w_fallback.py  phi4_mmlu_w_fallback_alternative_prompt.py  phi4mini_mmlu.py  phi4mini_mmlu_w_fallback.py  phi4mini_mmlu_w_fallback_alternative_prompt.py  qwen_3b_mmlu.py  (+2 more)
(+27 files in other folders)
