[project]
name = "reasoning-fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.3.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.1",
    "mistralai>=1.6.0",
    "numpy>=2.2.4",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.3",
    "ipykernel>=6.29.5",
]
